<resources>
    <string name="app_name">Nectar</string>

    <string name="ger_your_gr">Ger your groceries in as fast as one hour</string>
    <string name="bienvenue_dans_notre_store">Bienvenue dans notre store</string>
    <string name="commencer">Commencer</string>
    <string name="get_your_gr">Obtenez votre groceries avec nectar</string>
    <string name="num_ro">Numéro du téléphone</string>
    <string name="or_connect_">Ou connectez-vous avec compte social</string>
    <string name="continuer_avec_google">Continuer avec Google</string>
    <string name="continuer_avec_facebook">Continuer avec Facebook</string>
    <string name="entrer_votre_num_ro_de_t_l_phone">Entrer votre numéro de téléphone</string>
    <string name="n_est_pas_valide">" n'est pas valide"</string>
    <string name="otp">Otp</string>
    <string name="envoie_du_otp">Envoie d\'OTP</string>
    <string name="valider">Valider</string>
    <string name="votre_ville">Entrer votre ville</string>
    <string name="selectionner_votre_localisation">Selectionner votre localisation</string>
    <string name="votre_pays">Votre pays</string>
    <string name="ville">Votre ville</string>
    <string name="email">Email</string>
    <string name="entrer_votre_email">Entrer votre email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="connexion">Connexion</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte?</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="entrer_votre_mot_de_passe">Entrer votre mot de passe</string>
    <string name="entrer_votre_email_et_votre_mot_de_passe">Entrer votre email et votre mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="entrer_vos_coordonn_es_pour_continuer">Entrer vos coordonnées pour continuer</string>
    <string name="vous_avez_d_ja_de_compte">Vous avez déja de compte?</string>
    <string name="en_continuant_vous_reconnaissez_d_avoir_lu_et_accepter_les_termes_conditions_d_utilisation_et_la_politique_de_confidentialit"><![CDATA[En continuant, vous reconnaissez d\'avoir lu et accepter les termes & conditions d\'utilisation et la politique de confidentialité.]]></string>
    <string name="les_termes_conditions"><![CDATA[les termes & conditions]]></string>
    <string name="la_politique_de_confidentialit">la politique de confidentialité</string>
    <string name="entrer_votre_nom_amp_pr_nom"><![CDATA[Entrer votre nom & prénom]]></string>
    <string name="nom_amp_pr_nom"><![CDATA[Nom & prénom]]></string>
    <string name="compte">Compte</string>
    <string name="favoris">Favoris</string>
    <string name="panier">Panier</string>
    <string name="explorer">Explorer</string>
    <string name="boutique">Boutique</string>
    <string name="rechercher">Rechercher</string>
    <string name="voir_tout">Voir tout</string>
    <string name="offres_exclusives">Offres Exclusives</string>
    <string name="meilleures_ventes">Meilleures ventes</string>
    <string name="ajouter_au_panier">Ajouter au panier</string>
    <string name="detail_du_produit">Detail du produit</string>
    <string name="nutritions">Nutritions</string>
    <string name="notes">Notes</string>
    <string name="produits_laitiers_et_ufs">Produits laitiers et œufs</string>
    <string name="boissons">Boissons</string>
    <string name="fruits_l_gumes_frais"><![CDATA[Fruits & légumes frais]]></string>
    <string name="viande_poisson"><![CDATA[Viande & poisson]]></string>
    <string name="boulangerie_snacks"><![CDATA[Boulangerie & Snacks]]></string>
    <string name="huile_de_cuisson_ghee"><![CDATA[Huile de cuisson & ghee]]></string>
    <string name="filtrer">Filtrer</string>
    <string name="passer_la_commande">Passer la commande</string>
    <string name="tout_mettre_dans_le_panier">Tout mettre dans le panier</string>
    <string name="revenir_au_menu">Revenir au menu</string>
    <string name="suivre_la_commande">Suivre la commande</string>
    <string name="valider_le_paiement">Valider le paiement</string>
    <string name="piement">Paiement</string>
    <string name="livraison">Livraison</string>
    <string name="ajouter_votre_position">Ajouter votre position</string>
    <string name="mode_de_paiement">Mode de paiement</string>
    <string name="selectionner">Selectionner</string>
    <string name="code_promo">Code promo</string>
    <string name="le_saisir_si_vous_en_avez">Le saisir si vous en avez</string>
    <string name="prix_total">Prix total</string>
    <string name="r_essayer">Réessayer</string>
    <string name="votre_commande_a_t_n_accept_e">Votre commande a été\n acceptée</string>
    <string name="vos_articles_ont_t_plac_s_et_sont_nen_cours_de_traitement">Vos articles ont été placés et sont \nen cours de traitement.</string>
    <string name="oops_commande_n_chou_e">Oops! Commande \néchouée</string>
    <string name="veuillez_r_essayer">Veuillez réessayer</string>
    <string name="mes_commandes">Mes commandes</string>
    <string name="mes_details">Mes details</string>
    <string name="methode_de_paiement">Methode de paiement</string>
    <string name="notifications">Notifications</string>
    <string name="aides">Aides</string>
    <string name="a_propos">A propos</string>

</resources>